# wasi-version

./: Cargo.toml  README.md
interfaces/: wasi_snapshot_preview0.wasm_int  wasi_snapshot_preview1.wasm_int
src/: main.rs
